# Competing_pathogens_Heterogenous_networks

./: .gitignore  README.md  analysis.ipynb  network.html  percolationthreshold_evolvingnetwork.py  pyproject.toml  simulations_pudatedR0.ipynb  trial.ipynb  visualise.ipynb
Network_generation/: data.ipynb  emprirical_networks.py  network_gen.py  trial.ipynb
Real_world_data/: calibration.ipynb  hospital_network.txt
Real_world_data/Oregon_router_networks/: README.txt
Real_world_data/calibration/: Fludata.csv  Fludata_Germany_2016_2024.csv  Fludata_US_2016_2024.csv
results_final/: high_school_network.txt  influence_nw.txt  nw9_May_26.txt
simulations_and_analysis/: SID_ODE.ipynb  contourplot.ipynb  simulations.ipynb  visualise.ipynb
simulations_and_analysis/results_final/: high_school_network.txt  influence_nw.txt  nw9_May_26.txt
src/competing_pathogens_heterogenous_networks/: __init__.py
