[project]
name = "competing-pathogens-heterogenous-networks"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/competing_pathogens_heterogenous_networks"]
